--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,7 +1,19 @@
 <resources>
     <string name="app_name">Podcaster</string>
-
-    <string name="hello_world">Hello world!</string>
     <string name="action_settings">Settings</string>
     <string name="title_activity_search">SearchActivity</string>
+
+    <string-array name="search_source_array">
+        <item>All</item>
+        <item>Title Only</item>
+    </string-array>
+
+    <string-array name="sort_by_array">
+        <item>Alphabetically</item>
+        <item>Most Clicked</item>
+        <item>Most Subscribed</item>
+        <item>New</item>
+        <item>Relevance</item>
+        <item>Rating</item>
+    </string-array>
 </resources>
