construct api string when clicking search

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -16,4 +16,7 @@
         <item>Relevance</item>
         <item>Rating</item>
     </string-array>
+    <string name="title_activity_search_results">SearchResultsActivity</string>
+
+    <string name="hello_world">Hello world!</string>
 </resources>
